--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,6 +32,7 @@ dependencies {
     implementation 'com.android.support:recyclerview-v7:28.0.0'
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'com.facebook.android:facebook-login:4.39.0'
-
+    //noinspection GradleDependency
+    implementation 'com.facebook.android:facebook-android-sdk:[4,5)'
     implementation 'org.jetbrains:annotations-java5:15.0'
 }
