--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -49,7 +49,8 @@
         <activity android:name=".Dang_nhap" />
         <activity android:name=".Dat_San" />
         <activity android:name=".Thanh_Toan_Activity" />
-        <activity android:name=".Dat_Truoc_Activity"></activity>
+        <activity android:name=".Dat_Truoc_Activity" />
+        <activity android:name=".Binh_Luan_Activity"></activity>
     </application>
 
 </manifest>
