--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,4 +41,6 @@ dependencies {
     //noinspection GradleDependency
     implementation 'com.facebook.android:facebook-android-sdk:[4,5)'
     implementation 'org.jetbrains:annotations-java5:15.0'
+    debugImplementation 'com.idescout.sql:sqlscout-server:4.1'
+    releaseImplementation 'com.idescout.sql:sqlscout-server-noop:4.1'
 }
