--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,10 @@ allprojects {
         mavenCentral()
         google()
         jcenter()
+        maven {
+            url 'http://www.idescout.com/maven/repo/'
+            name 'IDEScout, Inc.'
+        }
     }
 }
 
